--- a/05-Position-and-Grid/00_Project_exercise/index.html
+++ b/05-Position-and-Grid/00_Project_exercise/index.html
@@ -28,6 +28,27 @@
                     </button>
             </div>
         </article>
+        <article class="card card--read-more">
+            <div class="head">
+                <span class="head__tag">
+                    SPAIN
+                </span>
+                <img class="head__img" src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="card image">
+            </div>
+            <div class="content">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda. Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
+                    </p>
+                    <button class="content__btn">
+                        Read more
+                    </button>
+            </div>
+        </article>
     </main>
 </body>
 </html>
