Card with background image

--- a/05-Position-and-Grid/00_Project_exercise/index.html
+++ b/05-Position-and-Grid/00_Project_exercise/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Project exercise</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <main>
         <article class="card">
@@ -14,18 +16,21 @@
                 <span class="head__tag">
                     SPAIN
                 </span>
-                <img class="head__img" src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="card image">
+                <img class="head__img"
+                    src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                    alt="card image">
             </div>
             <div class="content content--icon">
-                    <h2 class="content__title">
-                        Toledo, Spain
-                    </h2>
-                    <p class="content__desc">
-                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
-                    </p>
-                    <button class="content__icon">
-                        <i class="fas fa-heart"></i>
-                    </button>
+                <h2 class="content__title">
+                    Toledo, Spain
+                </h2>
+                <p class="content__desc">
+                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                    estofoda.
+                </p>
+                <button class="content__icon">
+                    <i class="fas fa-heart"></i>
+                </button>
             </div>
         </article>
         <article class="card card--read-more">
@@ -33,22 +38,51 @@
                 <span class="head__tag">
                     SPAIN
                 </span>
-                <img class="head__img" src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="card image">
+                <img class="head__img"
+                    src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                    alt="card image">
             </div>
             <div class="content">
-                    <h2 class="content__title">
-                        Toledo, Spain
-                    </h2>
-                    <p class="content__desc">
-                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda. Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
-                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
-                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz estofoda.
-                    </p>
-                    <button class="content__btn">
-                        Read more
-                    </button>
+                <h2 class="content__title">
+                    Toledo, Spain
+                </h2>
+                <p class="content__desc">
+                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                    estofoda. Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz
+                    and perdiz estofoda.
+                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                    estofoda.
+                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                    estofoda.
+                </p>
+                <button class="content__btn">
+                    Read more
+                </button>
+            </div>
+        </article>
+
+        <article class="card card--bg-img">
+            <img class="card__bg-img"
+                    src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                    alt="card image">
+            <div class="head">
+                <span class="head__tag">
+                    SPAIN
+                </span>
+                <button class="head__action">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+            <div class="content">
+                <h2 class="content__title">
+                    Toledo, Spain
+                </h2>
+                <p class="content__desc">
+                    Some of the local specialties include lamb roast or stew.
+                </p>
             </div>
         </article>
     </main>
 </body>
+
 </html>
