--- a/05-Position-and-Grid/00_Project_exercise/index.html
+++ b/05-Position-and-Grid/00_Project_exercise/index.html
@@ -11,77 +11,156 @@
 
 <body>
     <main>
-        <article class="card">
-            <div class="head">
-                <span class="head__tag">
-                    SPAIN
-                </span>
-                <img class="head__img"
-                    src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-                    alt="card image">
+        <section class="layout">
+            <article class="layout-item-1 card">
+                <div class="head">
+                    <span class="head__tag">
+                        SPAIN
+                    </span>
+                    <img class="head__img"
+                        src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                        alt="card image">
+                </div>
+                <div class="content content--icon">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                        estofoda.
+                    </p>
+                    <button class="content__icon">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                </div>
+            </article>
+            <article class="layout-item-2 card">
+                <div class="head">
+                    <span class="head__tag">
+                        SPAIN
+                    </span>
+                    <img class="head__img"
+                        src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                        alt="card image">
+                </div>
+                <div class="content content--icon">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                        estofoda.
+                    </p>
+                    <button class="content__icon">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                </div>
+            </article>
+            <article class="layout-item-3 card">
+                <div class="head">
+                    <span class="head__tag">
+                        SPAIN
+                    </span>
+                    <img class="head__img"
+                        src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                        alt="card image">
+                </div>
+                <div class="content content--icon">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                        estofoda.
+                    </p>
+                    <button class="content__icon">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                </div>
+            </article>
+            <article class="layout-item-4 card card--read-more">
+                <div class="head">
+                    <span class="head__tag">
+                        SPAIN
+                    </span>
+                    <img class="head__img"
+                        src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                        alt="card image">
+                </div>
+                <div class="content">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                        estofoda. Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz
+                        and perdiz estofoda.
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                        estofoda.
+                        Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
+                        estofoda.
+                    </p>
+                    <button class="content__btn">
+                        Read more
+                    </button>
+                </div>
+            </article>
+    
+            <article class="layout-item-5 card card--bg-img">
+                <img class="card__bg-img"
+                        src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                        alt="card image">
+                <div class="head">
+                    <span class="head__tag">
+                        SPAIN
+                    </span>
+                    <button class="head__action">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                </div>
+                <div class="content">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew.
+                    </p>
+                </div>
+            </article>
+            <article class="layout-item-6 card card--bg-img">
+                <img class="card__bg-img"
+                        src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                        alt="card image">
+                <div class="head">
+                    <span class="head__tag">
+                        SPAIN
+                    </span>
+                    <button class="head__action">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                </div>
+                <div class="content">
+                    <h2 class="content__title">
+                        Toledo, Spain
+                    </h2>
+                    <p class="content__desc">
+                        Some of the local specialties include lamb roast or stew.
+                    </p>
+                </div>
+            </article>
+            <div class="layout-item-7 panel">
+                <i class="panel__icon fas fa-comments"></i>
+                <p class="panel__text">Comments</p>
             </div>
-            <div class="content content--icon">
-                <h2 class="content__title">
-                    Toledo, Spain
-                </h2>
-                <p class="content__desc">
-                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
-                    estofoda.
-                </p>
-                <button class="content__icon">
-                    <i class="fas fa-heart"></i>
-                </button>
+            <div class="layout-item-8 panel">
+                <i class="panel__icon fas fa-comments"></i>
+                <p class="panel__text">Comments</p>
             </div>
-        </article>
-        <article class="card card--read-more">
-            <div class="head">
-                <span class="head__tag">
-                    SPAIN
-                </span>
-                <img class="head__img"
-                    src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-                    alt="card image">
+            <div class="layout-item-9 panel">
+                <i class="panel__icon fas fa-cloud-download-alt"></i>
+                <p class="panel__text">Downloads</p>
             </div>
-            <div class="content">
-                <h2 class="content__title">
-                    Toledo, Spain
-                </h2>
-                <p class="content__desc">
-                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
-                    estofoda. Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz
-                    and perdiz estofoda.
-                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
-                    estofoda.
-                    Some of the local specialties include lamb roast or stew, cochifrito, alubias con perdiz and perdiz
-                    estofoda.
-                </p>
-                <button class="content__btn">
-                    Read more
-                </button>
-            </div>
-        </article>
-
-        <article class="card card--bg-img">
-            <img class="card__bg-img"
-                    src="https://images.unsplash.com/photo-1561632669-7f55f7975606?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3BhaW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
-                    alt="card image">
-            <div class="head">
-                <span class="head__tag">
-                    SPAIN
-                </span>
-                <button class="head__action">
-                    <i class="fas fa-heart"></i>
-                </button>
-            </div>
-            <div class="content">
-                <h2 class="content__title">
-                    Toledo, Spain
-                </h2>
-                <p class="content__desc">
-                    Some of the local specialties include lamb roast or stew.
-                </p>
-            </div>
-        </article>
+        </section>
     </main>
 </body>
 
