--- a/08-Exam-Prep/03bis_Wirework/index.html
+++ b/08-Exam-Prep/03bis_Wirework/index.html
@@ -16,7 +16,7 @@
         </p>
         <nav class="nav-container">
             <ul class="nav" role="list">
-                <li class="nav-item"><a href="" class="nav-link">HOMEPAGE</a></li>
+                <li class="nav-item active"><a href="" class="nav-link">HOMEPAGE</a></li>
                 <li class="nav-item"><a href="" class="nav-link">OUR CLIENTS</a></li>
                 <li class="nav-item"><a href="" class="nav-link">ABOUT US</a></li>
                 <li class="nav-item"><a href="" class="nav-link">CAREERS</a></li>
@@ -25,7 +25,16 @@
         </nav>
     </header>
     <main>
-
+        <section id="hero">
+            <div class="img-container">
+                <img src="./images/banner.jpg" alt="Hero image" class="hero-img">
+            </div>
+            <div class="content">
+                <p class="text">
+                    This is <b>Wirework</b>, a free, fully standards-compliant CSS template designed by <a href="">TEMPLATED</a>. The photos in this template are from <a href="">Fotogrph</a>. This free template is released under the Creative <a href="">Commons Attribution license</a>, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :)
+                </p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
