--- a/08-Exam-Prep/03bis_Wirework/index.html
+++ b/08-Exam-Prep/03bis_Wirework/index.html
@@ -35,6 +35,77 @@
                 </p>
             </div>
         </section>
+        <section id="features" class="section--full">
+            <ul class="section-grid" role="list">
+                <li class="section-grid-item">
+                    <div class="icon-container">
+                        <i class="fa-solid fa-key"></i>
+                    </div>
+                    <h2 class="title">Maecenas lectus sapien</h2>
+                    <div class="divider"></div>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+                <li class="section-grid-item">
+                    <div class="icon-container">
+                        <i class="fa-solid fa-scale-unbalanced-flip"></i>
+                    </div>
+                    <h2 class="title">Praesent scelerisque</h2>
+                    <div class="divider"></div>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+                <li class="section-grid-item">
+                    <div class="icon-container">
+                        <i class="fa-solid fa-unlock-keyhole"></i>
+                    </div>
+                    <h2 class="title">Fusce ultrices fringilla</h2>
+                    <div class="divider"></div>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+                <li class="section-grid-item">
+                    <div class="icon-container">
+                        <i class="fa-solid fa-wrench"></i>
+                    </div>
+                    <h2 class="title">Etiam posuere augue</h2>
+                    <div class="divider"></div>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+            </ul>
+        </section>
+        <section id="subscribe" class="section--full">
+            <h2 class="title">Maecenas vitae orci vitae tellus feugiat eleifend</h2>
+            <p class="desc">QUISQUE DICTUM INTEGER NISL RISUS, SAGITTIS CONVALLIS, RUTRUM ID, CONGUE, AND NIBH</p>
+            <button class="btn">ETIAM POSUERE</button>
+        </section>
+        <section id="advantages" class="section--full">
+            <ul class="section-grid" role="list">
+                <li class="section-grid-item">
+                    <h2 class="title">Maecenas lectus sapien</h2>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+                <li class="section-grid-item">
+                    <h2 class="title">Praesent scelerisque</h2>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+                <li class="section-grid-item">
+                    <h2 class="title">Fusce ultrices fringilla</h2>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+                <li class="section-grid-item">
+                    <h2 class="title">Etiam posuere augue</h2>
+                    <p class="desc">In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+                </li>
+            </ul>
+        </section>
     </main>
+    <footer id="footer" class="section--full">
+        <!-- <p class="footer-text">
+            © UNTITLED. ALL RIGHTS RESERVED. | PHOTOS BY FOTOGRPH | DESIGN BY TEMPLATED.
+        </p> -->
+        <ul class="resources" role="list">
+            <li class="resource">© UNTITLED. ALL RIGHTS RESERVED</li>
+            <li class="resource">PHOTOS BY <a href="#">FOTOGRPH</a></li>
+            <li class="resource">DESIGN BY <a href="#">TEMPLATED</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
